Progress on the design patterns
